// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dts 1`] = `
[
  {
    "end": 36,
    "loc": {
      "end": {
        "column": 20,
        "index": 36,
        "line": 3,
      },
      "start": {
        "column": 17,
        "index": 33,
        "line": 3,
      },
    },
    "name": "foo",
    "start": 33,
  },
  {
    "end": 59,
    "loc": {
      "end": {
        "column": 21,
        "index": 59,
        "line": 4,
      },
      "start": {
        "column": 18,
        "index": 56,
        "line": 4,
      },
    },
    "name": "foo",
    "start": 56,
  },
  {
    "end": 91,
    "loc": {
      "end": {
        "column": 26,
        "index": 91,
        "line": 5,
      },
      "start": {
        "column": 18,
        "index": 83,
        "line": 5,
      },
    },
    "name": "@foo/foo",
    "start": 83,
  },
  {
    "end": 119,
    "loc": {
      "end": {
        "column": 26,
        "index": 119,
        "line": 6,
      },
      "start": {
        "column": 18,
        "index": 111,
        "line": 6,
      },
    },
    "name": "@foo/foo",
    "start": 111,
  },
  {
    "end": 155,
    "loc": {
      "end": {
        "column": 30,
        "index": 155,
        "line": 7,
      },
      "start": {
        "column": 23,
        "index": 148,
        "line": 7,
      },
    },
    "name": "foo-foo",
    "start": 148,
  },
  {
    "end": 186,
    "loc": {
      "end": {
        "column": 29,
        "index": 186,
        "line": 8,
      },
      "start": {
        "column": 22,
        "index": 179,
        "line": 8,
      },
    },
    "name": "foo.foo",
    "start": 179,
  },
  {
    "end": 302,
    "loc": {
      "end": {
        "column": 37,
        "index": 302,
        "line": 12,
      },
      "start": {
        "column": 26,
        "index": 291,
        "line": 12,
      },
    },
    "name": "foo-foo-foo",
    "start": 291,
  },
]
`;

exports[`js 1`] = `
[
  {
    "end": 20,
    "loc": {
      "end": {
        "column": 20,
        "index": 20,
        "line": 1,
      },
      "start": {
        "column": 17,
        "index": 17,
        "line": 1,
      },
    },
    "name": "foo",
    "start": 17,
  },
  {
    "end": 43,
    "loc": {
      "end": {
        "column": 21,
        "index": 43,
        "line": 2,
      },
      "start": {
        "column": 18,
        "index": 40,
        "line": 2,
      },
    },
    "name": "foo",
    "start": 40,
  },
  {
    "end": 75,
    "loc": {
      "end": {
        "column": 26,
        "index": 75,
        "line": 3,
      },
      "start": {
        "column": 18,
        "index": 67,
        "line": 3,
      },
    },
    "name": "@foo/foo",
    "start": 67,
  },
  {
    "end": 103,
    "loc": {
      "end": {
        "column": 26,
        "index": 103,
        "line": 4,
      },
      "start": {
        "column": 18,
        "index": 95,
        "line": 4,
      },
    },
    "name": "@foo/foo",
    "start": 95,
  },
  {
    "end": 139,
    "loc": {
      "end": {
        "column": 30,
        "index": 139,
        "line": 5,
      },
      "start": {
        "column": 23,
        "index": 132,
        "line": 5,
      },
    },
    "name": "foo-foo",
    "start": 132,
  },
  {
    "end": 170,
    "loc": {
      "end": {
        "column": 29,
        "index": 170,
        "line": 6,
      },
      "start": {
        "column": 22,
        "index": 163,
        "line": 6,
      },
    },
    "name": "foo.foo",
    "start": 163,
  },
  {
    "end": 274,
    "loc": {
      "end": {
        "column": 24,
        "index": 274,
        "line": 11,
      },
      "start": {
        "column": 21,
        "index": 271,
        "line": 11,
      },
    },
    "name": "bar",
    "start": 271,
  },
  {
    "end": 302,
    "loc": {
      "end": {
        "column": 25,
        "index": 302,
        "line": 12,
      },
      "start": {
        "column": 22,
        "index": 299,
        "line": 12,
      },
    },
    "name": "bar",
    "start": 299,
  },
  {
    "end": 339,
    "loc": {
      "end": {
        "column": 30,
        "index": 339,
        "line": 13,
      },
      "start": {
        "column": 22,
        "index": 331,
        "line": 13,
      },
    },
    "name": "@bar/bar",
    "start": 331,
  },
  {
    "end": 372,
    "loc": {
      "end": {
        "column": 30,
        "index": 372,
        "line": 14,
      },
      "start": {
        "column": 22,
        "index": 364,
        "line": 14,
      },
    },
    "name": "@bar/bar",
    "start": 364,
  },
  {
    "end": 434,
    "loc": {
      "end": {
        "column": 23,
        "index": 434,
        "line": 17,
      },
      "start": {
        "column": 20,
        "index": 431,
        "line": 17,
      },
    },
    "name": "baz",
    "start": 431,
  },
  {
    "end": 461,
    "loc": {
      "end": {
        "column": 24,
        "index": 461,
        "line": 18,
      },
      "start": {
        "column": 21,
        "index": 458,
        "line": 18,
      },
    },
    "name": "baz",
    "start": 458,
  },
  {
    "end": 497,
    "loc": {
      "end": {
        "column": 29,
        "index": 497,
        "line": 19,
      },
      "start": {
        "column": 21,
        "index": 489,
        "line": 19,
      },
    },
    "name": "@baz/baz",
    "start": 489,
  },
  {
    "end": 529,
    "loc": {
      "end": {
        "column": 29,
        "index": 529,
        "line": 20,
      },
      "start": {
        "column": 21,
        "index": 521,
        "line": 20,
      },
    },
    "name": "@baz/baz",
    "start": 521,
  },
]
`;

exports[`jsx 1`] = `
[
  {
    "end": 20,
    "loc": {
      "end": {
        "column": 20,
        "index": 20,
        "line": 1,
      },
      "start": {
        "column": 17,
        "index": 17,
        "line": 1,
      },
    },
    "name": "foo",
    "start": 17,
  },
  {
    "end": 43,
    "loc": {
      "end": {
        "column": 21,
        "index": 43,
        "line": 2,
      },
      "start": {
        "column": 18,
        "index": 40,
        "line": 2,
      },
    },
    "name": "foo",
    "start": 40,
  },
  {
    "end": 75,
    "loc": {
      "end": {
        "column": 26,
        "index": 75,
        "line": 3,
      },
      "start": {
        "column": 18,
        "index": 67,
        "line": 3,
      },
    },
    "name": "@foo/foo",
    "start": 67,
  },
  {
    "end": 103,
    "loc": {
      "end": {
        "column": 26,
        "index": 103,
        "line": 4,
      },
      "start": {
        "column": 18,
        "index": 95,
        "line": 4,
      },
    },
    "name": "@foo/foo",
    "start": 95,
  },
  {
    "end": 139,
    "loc": {
      "end": {
        "column": 30,
        "index": 139,
        "line": 5,
      },
      "start": {
        "column": 23,
        "index": 132,
        "line": 5,
      },
    },
    "name": "foo-foo",
    "start": 132,
  },
  {
    "end": 170,
    "loc": {
      "end": {
        "column": 29,
        "index": 170,
        "line": 6,
      },
      "start": {
        "column": 22,
        "index": 163,
        "line": 6,
      },
    },
    "name": "foo.foo",
    "start": 163,
  },
  {
    "end": 274,
    "loc": {
      "end": {
        "column": 24,
        "index": 274,
        "line": 11,
      },
      "start": {
        "column": 21,
        "index": 271,
        "line": 11,
      },
    },
    "name": "bar",
    "start": 271,
  },
  {
    "end": 302,
    "loc": {
      "end": {
        "column": 25,
        "index": 302,
        "line": 12,
      },
      "start": {
        "column": 22,
        "index": 299,
        "line": 12,
      },
    },
    "name": "bar",
    "start": 299,
  },
  {
    "end": 339,
    "loc": {
      "end": {
        "column": 30,
        "index": 339,
        "line": 13,
      },
      "start": {
        "column": 22,
        "index": 331,
        "line": 13,
      },
    },
    "name": "@bar/bar",
    "start": 331,
  },
  {
    "end": 372,
    "loc": {
      "end": {
        "column": 30,
        "index": 372,
        "line": 14,
      },
      "start": {
        "column": 22,
        "index": 364,
        "line": 14,
      },
    },
    "name": "@bar/bar",
    "start": 364,
  },
  {
    "end": 434,
    "loc": {
      "end": {
        "column": 23,
        "index": 434,
        "line": 17,
      },
      "start": {
        "column": 20,
        "index": 431,
        "line": 17,
      },
    },
    "name": "baz",
    "start": 431,
  },
  {
    "end": 461,
    "loc": {
      "end": {
        "column": 24,
        "index": 461,
        "line": 18,
      },
      "start": {
        "column": 21,
        "index": 458,
        "line": 18,
      },
    },
    "name": "baz",
    "start": 458,
  },
  {
    "end": 497,
    "loc": {
      "end": {
        "column": 29,
        "index": 497,
        "line": 19,
      },
      "start": {
        "column": 21,
        "index": 489,
        "line": 19,
      },
    },
    "name": "@baz/baz",
    "start": 489,
  },
  {
    "end": 529,
    "loc": {
      "end": {
        "column": 29,
        "index": 529,
        "line": 20,
      },
      "start": {
        "column": 21,
        "index": 521,
        "line": 20,
      },
    },
    "name": "@baz/baz",
    "start": 521,
  },
]
`;

exports[`ts 1`] = `
[
  {
    "end": 36,
    "loc": {
      "end": {
        "column": 20,
        "index": 36,
        "line": 3,
      },
      "start": {
        "column": 17,
        "index": 33,
        "line": 3,
      },
    },
    "name": "foo",
    "start": 33,
  },
  {
    "end": 59,
    "loc": {
      "end": {
        "column": 21,
        "index": 59,
        "line": 4,
      },
      "start": {
        "column": 18,
        "index": 56,
        "line": 4,
      },
    },
    "name": "foo",
    "start": 56,
  },
  {
    "end": 91,
    "loc": {
      "end": {
        "column": 26,
        "index": 91,
        "line": 5,
      },
      "start": {
        "column": 18,
        "index": 83,
        "line": 5,
      },
    },
    "name": "@foo/foo",
    "start": 83,
  },
  {
    "end": 119,
    "loc": {
      "end": {
        "column": 26,
        "index": 119,
        "line": 6,
      },
      "start": {
        "column": 18,
        "index": 111,
        "line": 6,
      },
    },
    "name": "@foo/foo",
    "start": 111,
  },
  {
    "end": 155,
    "loc": {
      "end": {
        "column": 30,
        "index": 155,
        "line": 7,
      },
      "start": {
        "column": 23,
        "index": 148,
        "line": 7,
      },
    },
    "name": "foo-foo",
    "start": 148,
  },
  {
    "end": 186,
    "loc": {
      "end": {
        "column": 29,
        "index": 186,
        "line": 8,
      },
      "start": {
        "column": 22,
        "index": 179,
        "line": 8,
      },
    },
    "name": "foo.foo",
    "start": 179,
  },
  {
    "end": 302,
    "loc": {
      "end": {
        "column": 37,
        "index": 302,
        "line": 12,
      },
      "start": {
        "column": 26,
        "index": 291,
        "line": 12,
      },
    },
    "name": "foo-foo-foo",
    "start": 291,
  },
  {
    "end": 329,
    "loc": {
      "end": {
        "column": 24,
        "index": 329,
        "line": 14,
      },
      "start": {
        "column": 21,
        "index": 326,
        "line": 14,
      },
    },
    "name": "bar",
    "start": 326,
  },
  {
    "end": 357,
    "loc": {
      "end": {
        "column": 25,
        "index": 357,
        "line": 15,
      },
      "start": {
        "column": 22,
        "index": 354,
        "line": 15,
      },
    },
    "name": "bar",
    "start": 354,
  },
  {
    "end": 394,
    "loc": {
      "end": {
        "column": 30,
        "index": 394,
        "line": 16,
      },
      "start": {
        "column": 22,
        "index": 386,
        "line": 16,
      },
    },
    "name": "@bar/bar",
    "start": 386,
  },
  {
    "end": 427,
    "loc": {
      "end": {
        "column": 30,
        "index": 427,
        "line": 17,
      },
      "start": {
        "column": 22,
        "index": 419,
        "line": 17,
      },
    },
    "name": "@bar/bar",
    "start": 419,
  },
  {
    "end": 489,
    "loc": {
      "end": {
        "column": 23,
        "index": 489,
        "line": 20,
      },
      "start": {
        "column": 20,
        "index": 486,
        "line": 20,
      },
    },
    "name": "baz",
    "start": 486,
  },
  {
    "end": 516,
    "loc": {
      "end": {
        "column": 24,
        "index": 516,
        "line": 21,
      },
      "start": {
        "column": 21,
        "index": 513,
        "line": 21,
      },
    },
    "name": "baz",
    "start": 513,
  },
  {
    "end": 552,
    "loc": {
      "end": {
        "column": 29,
        "index": 552,
        "line": 22,
      },
      "start": {
        "column": 21,
        "index": 544,
        "line": 22,
      },
    },
    "name": "@baz/baz",
    "start": 544,
  },
  {
    "end": 584,
    "loc": {
      "end": {
        "column": 29,
        "index": 584,
        "line": 23,
      },
      "start": {
        "column": 21,
        "index": 576,
        "line": 23,
      },
    },
    "name": "@baz/baz",
    "start": 576,
  },
]
`;
